--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,8 +1,7 @@
 name: 测试构建
 
 on:
-  push:
-    branches: [ master ]
+  workflow_dispatch: build
 
 jobs:
   build:
@@ -13,24 +12,24 @@ jobs:
       matrix:
        include:
       #  两行一组，删除不需要的版本
-         - platform: bromolow
-           version: 6.2.4-25556
-         - platform: bromolow
-           version: 7.0-41222
-         - platform: bromolow
-           version: 7.0.1-42218
+#          - platform: bromolow
+#            version: 6.2.4-25556
+#          - platform: bromolow
+#            version: 7.0-41222
+#          - platform: bromolow
+#            version: 7.0.1-42218
+#          - platform: apollolake
+#            version: 6.2.4-25556
+#          - platform: apollolake
+#            version: 7.0-41890
          - platform: apollolake
-           version: 6.2.4-25556
-         - platform: apollolake
-           version: 7.0-41890
-         - platform: apollolake
            version: 7.0.1-42218
-         - platform: broadwell
-           version: 7.0.1-42218
-         - platform: broadwellnk
-           version: 7.0.1-42218
-         - platform: geminilake
-           version: 7.0.1-42218
+#          - platform: broadwell
+#            version: 7.0.1-42218
+#          - platform: broadwellnk
+#            version: 7.0.1-42218
+#          - platform: geminilake
+#            version: 7.0.1-42218
 
     steps:
       - name: 检出项目文件
@@ -60,8 +59,8 @@ jobs:
           # 调整synoinfo
           sed -i -e 's/"synoinfo": {},/"synoinfo": {\n\t"maxlanport": "2"\n    },/' ${{matrix.platform}}_user_config.json
           # 添加扩展驱动
-          ./redpill_tool_chain.sh add https://github.com/jumkey/redpill-load/raw/develop/redpill-acpid/rpext-index.json
-          ./redpill_tool_chain.sh add https://github.com/jumkey/redpill-load/raw/develop/redpill-virtio/rpext-index.json
+          ./redpill_tool_chain.sh add https://raw.githubusercontent.com/pocopico/rp-ext/master/igb/rpext-index.json
+          # ./redpill_tool_chain.sh add https://github.com/jumkey/redpill-load/raw/develop/redpill-virtio/rpext-index.json
 
       - name: 编译引导镜像
         run: ./redpill_tool_chain.sh auto ${{matrix.platform}}-${{matrix.version}}
